# odrive-rs

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: as5048a.rs  lib.rs  main.rs  motor.rs  rcc.rs  spi.rs
src/rcc/: enable.rs  pll.rs
