[package]
authors = ["h0gura <hiraku.o@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "odrive-rs"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "0.5.3"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
nb = "^0.1"
libm = "0.2.1"
drv8301 = { git = "https://github.com/h0gura/drv8301", branch = "main" }

[dependencies.stm32f4xx-hal]
version = "0.9"
features = ["rt", "stm32f405"]

[dependencies.embedded-hal]
version = "^0.2"
features = ["unproven"]

[dependencies.num-traits]
version = "^0.2"
default-features = false

[dependencies.defmt]
version = "~0.2"
optional = true

[features]
default = ["stm32f405", "use-defmt"]
use-defmt = ["defmt"]
stm32f405 = [
    "adc2", "adc3",
    "can1", "can2",
    "dac",
    "fsmc",
    "gpiod", "gpioe", "gpiof", "gpiog", "gpioi",
    "i2c3",
    "otg-fs",
    "otg-hs",
    "rng",
    "sdio",
    "spi3",
    "usart3", "uart4", "uart5",
]
adc2 = []
adc3 = []
can1 = []
can2 = []
dac = []
fmc = []
fsmc = []
fmpi2c1 = []
gpiod = []
gpioe = []
gpiof = []
gpiog = []
gpioi = []
gpioj = []
gpiok = []
i2c3 = []
otg-fs = []
otg-hs = []
rng = []
sdio = []
spi3 = []
spi4 = []
spi5 = []
spi6 = []
usart3 = []
uart4 = []
uart5 = []
uart7 = []
uart8 = []
uart9 = []
uart10 = []

# this lets you use `cargo fix`!
[[bin]]
name = "odrive-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
